--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,39 @@
 #logo {
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     left: 10px;
 }
+
+body {
+    padding-top: 20px;
+    margin: 0;
+    border: 0;
+}
+p, h1, h2, a, img {
+    padding: 10px;
+}
 ul {
+    margin: 0;
+    border: 0;
+    padding:0;
+}
+nav {
+    position: fixed;
+    top: 0;
+    padding: 0;
+    width: 100%;
+
+}
+nav ul {
     list-style-type: none;
-    padding: 30px;
+    padding: 5px;
     background-color: black;
     font-family: impact, arial;
-    text-align: center;
+    text-align: left;
     font-size: 30px;
+    min-width: 100%;
 }
+
 li {
     display: inline;
 }
@@ -18,7 +41,8 @@ li {
 li a {
     color: white;
     text-decoration: none;
-    padding: 30px;
+    padding: 5px 15px;
+    display: inline;
 }
 
 li a:hover:not(.active) {
