Updated nav, made black background

--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,35 @@
-#logo {
-    position: fixed;
-    bottom: 10px;
-    left: 10px;
-}
-
 body {
-    padding-top: 20px;
-    margin: 0;
+    padding-top: 30px;
     border: 0;
+    background-color: black;
+    color: white;
 }
 
-p, h1, h2, a, img {
-    padding: 10px;
+a{
+    margin-left: 10px;
+    text-decoration: none;
+    color: white;
 }
 
 ul {
     margin: 0;
-    border: 0;
     padding:0;
 }
+
 nav {
     position: fixed;
-    top: 0;
-    padding: 0;
     width: 100%;
-
+    top: 0;
+    left: 0;
+    border-bottom: solid grey 2px;
 }
+
 nav ul {
     list-style-type: none;
     padding: 5px;
     background-color: black;
     font-family: impact, arial;
-    text-align: left;
+    text-align: right;
     font-size: 30px;
     min-width: 100%;
 }
@@ -44,13 +42,42 @@ li a {
     color: white;
     text-decoration: none;
     padding: 5px 15px;
-    display: inline;
+    margin-right: 20px;
 }
 
 li a:hover:not(.active) {
-    background-color: green;
+    background-color: darkgoldenrod;
 }
 
 .active {
-    color: green;
+    color: darkgoldenrod;
+}
+/*Created img classes with CSS styling for stacking on game page - VLD*/
+img {
+    position: fixed;
+    top: 50px;
+    left: 0px;
+}
+
+img.bg {
+    z-index: 1;
+}
+
+img.bg2 {
+    z-index: 2;
+}
+
+img.bg3 {
+    z-index: 3;
+}
+
+img.voy {
+    z-index: 4;
+    left: 47px;
+}
+
+img#logo {
+    top: 0px;
+    left: 10px;
+    z-index: 99;
 }
