--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ nav {
     width: 100%;
     top: 0;
     left: 0;
-    border-bottom: solid grey 2px;
+    border-bottom: solid goldenrod 2px;
+    z-index: 47;
 }
 
 /*Sets up the general apperance of the unordered list in nav*/
@@ -57,31 +58,47 @@ li a:hover:not(.active) {
 img {
     position: fixed;
     top: 50px;
-    left: 0px;
+    left: 0px; 
 }
 
-img.bg {
-    z-index: 1;
-}
-
-img.bg2 {
-    z-index: 2;
-}
-
-img.bg3 {
-    z-index: 3;
-}
-
-img.voy {
-    z-index: 4;
-    height: 150px;
-    top: 270px;
-    left: 470px;
-}
 
 img#logo {
     height:35px;
     top: 5px;
     left: 10px;
     z-index: 99;
+}
+
+
+.myCanvas{
+    position: absolute;
+    top: 50px;
+    left:0;
+    min-width:100%;
+    background-color: transparent;
+    border-top: solid 2px maroon;
+    border-bottom: solid 2px darkblue;
+}
+
+.button {
+    background-color: green;
+    color: white;
+    border: 5px solid darkgreen;
+    position:absolute;
+    top: 750px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding: 10px;
+    font-size: 50px;
+    text-align: center;
+}
+
+.button:active {
+    background-color: darkgreen;
+    color: lightgrey;
+    border-color: black;
+}
+
+audio {
+    position: absolute;
+    top: 800px;
 }
