--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ img#logo {
     position: absolute;
     top: 50px;
     left:0;
-    width:100%;
+    min-width:100%;
     background-color: transparent;
     border-top: solid 2px maroon;
     border-bottom: solid 2px darkblue;
